<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskEditActivity">

    <Button
        android:id="@+id/decreaseButton"
        android:layout_width="34dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@android:color/darker_gray"
        android:padding="0dp"
        android:text="@string/btn_minus"
        android:textColor="@color/design_default_color_error"
        android:textSize="18sp"
        app:iconTint="@color/teal_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readinessTitleText" />

    <ImageButton
        android:id="@+id/cancelImageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:tint="@color/design_default_color_error"
        app:layout_constraintEnd_toStartOf="@+id/exitImageButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <TextView
        android:id="@+id/readinessTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:elegantTextHeight="true"
        android:text="@string/readiness"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />

    <TextView
        android:id="@+id/nameTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="34dp"
        android:elegantTextHeight="false"
        android:text="@string/task_name"
        android:textAllCaps="false"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descriptionTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:elegantTextHeight="true"
        android:text="@string/scope"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <TextView
        android:id="@+id/commentsTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:elegantTextHeight="true"
        android:text="@string/details"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readinessTitleText" />

    <ImageButton
        android:id="@+id/priorityUpImageButton"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <ImageButton
        android:id="@+id/priorityDownImageButton"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priorityEditText"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <TextView
        android:id="@+id/priorityEditText"
        android:layout_width="42dp"
        android:layout_height="27dp"
        android:layout_marginStart="12dp"
        android:editable="true"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priorityUpImageButton" />

    <ImageView
        android:id="@+id/readinessImageEditView"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/increaseButton"
        app:layout_constraintStart_toEndOf="@+id/decreaseButton"
        app:layout_constraintTop_toBottomOf="@+id/readinessTitleText"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:srcCompat="@drawable/created" />

    <ImageButton
        android:id="@+id/exitImageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:tint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/checked" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTitleText" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTitleText" />

    <EditText
        android:id="@+id/commentsEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:isScrollContainer="false"
        android:singleLine="false"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commentsTitleText" />

    <Button
        android:id="@+id/increaseButton"
        android:layout_width="34dp"
        android:layout_height="44dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/darker_gray"
        android:padding="0dp"
        android:text="@string/btn_plus"
        android:textColor="@color/teal_700"
        android:textSize="18sp"
        app:iconTint="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readinessTitleText" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>